Created a custom recycler view adapter to display results.

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,6 @@ proguard/
 captures/
 
 # IntelliJ
-*.iml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -74,7 +73,7 @@ captures/
 #*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
-.externalNativeBuild
+#.externalNativeBuild already mentioned above
 .cxx/
 
 # Google Services (e.g. APIs or Firebase)
@@ -101,3 +100,5 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+apikey.properties
